--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
