--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.20",
+    "@langchain/core": "^0.3.26",
+    "@langchain/openai": "^0.3.16",
     "@reduxjs/toolkit": "^2.5.0",
+    "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
+    "langchain": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "supabase": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
